<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-20dp"
        app:cardBackgroundColor="@color/colorWhite"
        app:cardCornerRadius="@dimen/margin10"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/tvSeatSelection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin8"
                android:fontFamily="@font/montserrat_medium"
                android:gravity="center"
                android:text="@string/seat_selection"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/textSize18" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/seat_no"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/textSize14" />

                <TextView
                    android:id="@+id/tvSeatNo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/textSize14" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin4"
                android:layout_marginBottom="@dimen/margin8">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_regular"
                    android:text="@string/total_price"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/textSize14" />

                <TextView
                    android:id="@+id/tvPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:fontFamily="@font/montserrat_regular"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/textSize14" />
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPrice"
                android:orientation="horizontal"
                android:weightSum="3">

                <TextView
                    android:id="@+id/tvCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPrice"
                    android:layout_weight="1"
                    android:fontFamily="@font/muli_bold"
                    android:padding="@dimen/margin8"
                    android:text="@string/cancel"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize14" />

                <TextView
                    android:id="@+id/tvFemale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPrice"
                    android:layout_toRightOf="@+id/tvCancel"
                    android:layout_weight="1"
                    android:fontFamily="@font/muli_bold"
                    android:gravity="center"
                    android:padding="@dimen/margin8"
                    android:text="@string/female"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize14" />

                <TextView
                    android:id="@+id/tvMale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvPrice"
                    android:layout_toRightOf="@+id/tvFemale"
                    android:layout_weight="1"
                    android:fontFamily="@font/muli_bold"
                    android:gravity="center"
                    android:padding="@dimen/margin8"
                    android:text="@string/male"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:textSize="@dimen/textSize14" />
            </LinearLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</RelativeLayout>