<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/nav_header_desc"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:visibility="gone"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/muli_extra_bold"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/nav_header_title"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSize18"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tvMobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvName"
        android:layout_centerInParent="true"
        android:fontFamily="@font/muli_regular"
        android:paddingTop="@dimen/margin4"
        android:text="@string/nav_header_title"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textSize14"
        android:visibility="gone" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:fontFamily="@font/montserrat_semi_bold"
        android:text="@string/login"
        android:textSize="@dimen/textSize18"
        android:visibility="gone"
        app:cornerRadius="@dimen/margin30"
        app:icon="@drawable/ic_person_black_24dp"
        app:strokeColor="@color/colorWhite"
        app:strokeWidth="@dimen/margin1" />

</RelativeLayout>
