<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bus_mobile_blur_dark"
    android:padding="@dimen/margin10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:layout_margin="@dimen/activity_vertical_margin"
        android:layout_marginTop="@dimen/margin40"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin20"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:maxLength="10"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            style="@style/TextInputLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin8"
            android:textColor="@color/colorWhite"
            android:textColorHint="@color/colorWhite"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/colorAccent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:inputType="textPassword"
                android:maxLines="1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/tvForgetPassword"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginTop="@dimen/margin8"
            android:layout_marginBottom="@dimen/margin8"
            android:fontFamily="@font/muli_light"
            android:text="@string/forgot_your_password"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize16" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/MyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login" />

        <TextView
            android:id="@+id/tvSignUp"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?selectableItemBackground"
            android:text="@string/sign_up_with_email"
            android:textAlignment="center"
            android:fontFamily="@font/muli_regular"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/textSize16" />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>
