<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bus_mobile_blur_dark">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin10"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilName"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin20"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/Name"
                    android:inputType="text"
                    android:lines="1"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilMobile"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin8"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etMobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="@string/mobile"
                    android:inputType="number"
                    android:lines="1"
                    android:maxLength="10"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilEmail"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin8"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"

                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/TextInputLayout"
                android:layout_width="match_parent"

                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin8"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:hint="Password"

                    android:inputType="textPassword"
                    android:lines="1"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/colorWhite" />

            </com.google.android.material.textfield.TextInputLayout>
            <!-- <CheckBox
                 android:layout_marginTop="@dimen/margin8"
                 android:layout_width="wrap_content"
                 android:text="@string/agreecheckbox"
                 android:textSize="@dimen/margin14"
                 android:buttonTint="@color/colorAccent"
                 android:textColor="@color/colorWhite"
                 android:layout_height="wrap_content" />-->
            <Button
                android:id="@+id/btnSignUp"
                style="@style/MyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/sign_up" />

        </LinearLayout>

    </ScrollView>
</RelativeLayout>
